src/routes/components/SearchForm.css
/* FORMULARIO */
div.form-search {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 200;
  height: 100vh;
  width: 100%;
  display: flex;
  background-color: rgba(0, 0, 0, 0.458);
  backdrop-filter: blur(4px);
}
form.form-modal {
  margin: 0 auto;
  color: var(--black-950);
  background-color: white;
  width: 100%;
  max-width: 47.375rem;
  height: fit-content;
  border-radius: 0.5rem;
  box-shadow: 0 10px 15px -3px #0000001a;
}
div.form-header-box {
  padding: 0 1rem;
  border-bottom: 1px solid rgb(241 245 249);
}
div.form-header {
  display: flex;
  align-items: center;
}
div.cities-prediction-box {
  padding: 24px;
}
div.cities-prediction-box div.city:not(:last-child) {
  margin-bottom: 12px;
}
div.cities-prediction-box div.city {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: rgb(248 250 252);
  padding: 12px 24px;
  border-radius: 0.5rem;
  transition: all 0.2s;
  cursor: pointer;
}
div.cities-prediction-box div.city:hover {
  background-color: var(--primary-blue-800);
  color: var(--white-light);
}
div.city div.city-info-box {
  display: flex;
  align-items: center;
}
div.city div.city-flag-box {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  border-radius: 0.375rem;
  background-position: center;
  background-repeat: no-repeat;
  background-color: var(--pure-white);
  box-shadow: 0 0 0 0px #fff, 0 0 0 1px #0f172a0d, 0 1px 2px 0 #0000000d;
}
form.form-modal div.form-footer-box {
  padding: 0.5rem 1rem;
  border-top: 1px solid rgb(241 245 249);
}
div.form-footer {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
a.form-github-link {
  display: flex;
  gap: 8px;
  align-items: center;
  color: var(--black-700);
}
button.search-icon:hover {
  cursor: pointer;
}
@media (min-width: 1024px) {
  div.form-search {
    padding: 12vh;
  }
}
@media (min-width: 768px) {
  div.form-search {
    padding: 10vh;
  }
}
@media (min-width: 640px) {
  div.form-search {
    padding: 1.5rem;
  }
}
@media (min-width: 480px) {
  div.form-search {
    padding: 1.5rem;
  }
}

